[package]
name = "benita"
version = "0.1.8"
authors = ["Joaquín R <globojorro@gmail.com>"]
description = "Software library for connecting sensors to the network"

[dependencies]
benita-ezo = { path = "./benita-ezo" }
chrono = "0.4.0"
clap = "2"
error-chain = "~0.11.0"
fern = "0.4"
log = "0.3"
neuras = { git = "https://github.com/saibatizoku/neuras.git", branch = "master" }
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"

[profile.release]
lto = true

[workspace]
