[package]
name = "benita"
version = "0.1.8"
authors = ["Joaquín R <globojorro@gmail.com>"]
description = "Software library for connecting sensors to the network"

[dependencies]
benita-ezo = { path = "benita-ezo" }
chrono = "0.4"
clap = "2"
failure = "0.1"
fern = "0.4"
log = "0.3"
neuras = { git = "https://github.com/saibatizoku/neuras.git", branch = "master" }
zmq = { git = "https://github.com/erickt/rust-zmq.git" }

[profile.release]
lto = true

[workspace]
